--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react-dom": "^16.3.2",
     "react-modal": "^3.4.4",
     "react-scripts": "1.1.4",
+    "styled-components": "^3.2.6",
     "uuid": "^3.2.1"
   },
   "scripts": {
